# 3lbvow

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index-295eec8abd2847c6.js  index-295eec8abd2847c6_bg.wasm  index-88ab0b2ddda71cfa.js  index-88ab0b2ddda71cfa_bg.wasm  index-895700457ecb9fb3.js  index-895700457ecb9fb3_bg.wasm  index-9d54b084bde79668.js  index-9d54b084bde79668_bg.wasm  index-b37c2b8bf3fb906f.js  index-b37c2b8bf3fb906f_bg.wasm  index-b44dfb511be743f4.js  index-b44dfb511be743f4_bg.wasm  index-d3a4e6202baebcbb.js  index-d3a4e6202baebcbb_bg.wasm  index.html  package-lock.json  package.json  tailwind-44a30433156220b1.css  tailwind-6581da30a46b33b6.css  tailwind-9d3aaaf5d90381a3.css  tailwind-e40e84c124ee21c2.css  tailwind.config.js
.github/workflows/: deploy.yml
src/: app.rs  main.rs
src/app/: components.rs  constants.rs  helper.rs  state.rs
src/app/components/: alert.rs  board.rs  keyboard.rs
