[package]
name = "qq6_3lbvow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
serde = { version = "1.0", features = ["derive"] }
gloo = "0.6"
# web-sys = "0.3"
# wasm-bindgen = "0.2"
rand = { version = "0.7", features = ["wasm-bindgen"] } 